fix: layout alignment

--- a/src/components/title-bar/title-bar.scss
+++ b/src/components/title-bar/title-bar.scss
@@ -18,7 +18,6 @@
 
   &-submitToken {
     margin-left: auto;
-    margin-right: 1em;
     width: 160px;
 
     &-icon {
