--- a/src/components/token-card/token-card.scss
+++ b/src/components/token-card/token-card.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   height: 230px;
-  margin: 10px;
+  margin: 10px 0;
   width: 248px;
 
   &-header {
