--- a/src/containers/tokens/tokens.scss
+++ b/src/containers/tokens/tokens.scss
@@ -2,7 +2,7 @@
 
 /* @define Tokens */
 .Tokens {
-  align-items: center;
+  align-items: stretch;
   background-color: $darkerWhite;
   display: flex;
   flex-direction: column;
@@ -15,6 +15,6 @@
 .TokenGrid {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   margin-top: 1em;
 }
